fix: rework proportions of language picker styling on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,7 +318,6 @@ Language Switch
 }
 
 .sl-nav li .dropdown li span {
-  font-size: 1.3rem;
   white-space: nowrap;
 }
 .sl-nav li .dropdown li span.active {
@@ -1280,7 +1279,7 @@ a.btn {
     position: relative;
     text-transform: uppercase;
     text-align: center;
-    font-size: 1.3em;
+    font-size: 1.6rem;
   }
 
   header .nav__list ul {
@@ -1371,7 +1370,7 @@ a.btn {
 
   .sl-nav li .dropdown li {
     text-align: center;
-    padding: initial;
+    padding: 0.5rem 0.75rem;
   }
 
   .sl-nav li .dropdown li span {
